# embedded_hal

./: CMakeLists.txt  README.md  gpio.hpp  main.cpp  registers.hpp
bits/: bitmask.hpp
concepts_lib/: equality.hpp
enum/: enum_array.hpp  enum_common.hpp  enum_flag.hpp  enum_utils.hpp
peripherals/: adc.hpp  gpio.hpp  peripheral.hpp  spi.hpp
tests/: enum_test.cpp  enum_test.hpp  gpio_test.cpp  gpio_test.hpp  spi_test.cpp  spi_test.hpp
